--- a/index.html
+++ b/index.html
@@ -3,10 +3,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">  
+    <link
+        href="https://fonts.googleapis.com/css?family=Lora:400,400i|Raleway:700&display=swap"
+        rel="stylesheet"><!-- google fonts link -->
+    <script src="https://kit.fontawesome.com/eea5571693.js"
+        crossorigin="anonymous"></script>    
+    <link rel="stylesheet" href="./style/style.css"><!-- font awesome link -->  
     <title>Delicious Home Page</title>
 </head>
 <body>
-    
+    <header>
+    <!-- background image -->
+        <div class="topBar">        
+            <h1>Delicious</h1>
+            <nav>
+                <ul class="topMainMenu">
+                    <li>
+                        <li>
+                            <!-- set as hidden -->
+                            <i class="fas fa-plus topMobileMenu"></i>
+                            <!-- alternates
+                                <i class="far fa-bars"></i>
+                                <i class="fas fa-ellipsis-h"></i> -->
+                        </li>
+                        <!-- set with Flex -->
+                        <ul class="subMenu">
+                            <li><a href="#home"></a>home</li>
+                            <!-- home is green -->
+                            <li><a href="#about"></a>about</li>
+                            <li><a href="#recipes"></a>recipes</li>
+                            <li><a href="#nutrition"></a>nutrition</li>
+                            <li><a href="#blog"></a>blog</li>
+                            <li><a href="#shop"></a>shop</li>
+                            <li><a href="#contact"></a>contact</li>
+                            <li>
+                                <i class="fas fa-shopping-bag"></i>
+                                <P>2</P>
+                                <!-- 2 styled inside circle, above shopping bag -->
+                            </li>
+                            <li><i class="fas fa-search"></i></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="feature featureRecipe">
+            <h2>most popular recipes</h2>     
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quis. Porro alias amet quasi ea. Possimus provident nemo atque enim eligendi, fugit commodi quia in corrupti? Consequatur laboriosam perspiciatis nam a reprehenderit, cupiditate, recusandae aperiam hic commodi, dicta est ex aspernatur beatae tempora ipsum unde ut! Provident, repudiandae.</p>
+            <!-- 48 words -->
+            <a class="button" href="http://">view recipes</a>
+        </section>
+        <div class="feature featureImg">
+            <img src="./assets/home-2.jpeg" alt="looking down on blue salad bowl with greens">
+        </div>
+        <section class="feature featureCategories">
+            <ul>
+                <li class="category" >
+                    <i class="fas fa-lemon"></i>
+                    <h3>vegetarian</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt, illo nihil perferendis vitae sint tempora voluptas tempore suscipit?</p>
+                    <!-- 19 words -->
+                </li>
+                <li>
+                    <i class="fas fa-utensils"></i>
+                    <h3>appetizers</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi architecto facilis sint soluta! Quod, magnam. Perspiciatis, odio. Dolores, sapiente?</p>
+                </li>   
+                <li>
+                    <i class="fas fa-coffee"></i>
+                    <h3>desserts</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium in natus earum incidunt pariatur adipisci animi excepturi tenetur aliquam.</p>
+                </li>
+                <li>
+                    <i class="fas fa-glass-martini"></i>
+                    <h3>drinks</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quidem obcaecati dolore totam repudiandae ex facilis quibusdam fugit corrupti!</p>
+                </li>
+                <li>
+                    <i class="fas fa-leaf"></i>
+                    <h3>salads</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusantium cum facere sapiente, fuga delectus laboriosam quae vitae esse?</p>
+                </li>
+                <li>
+                    <i class="fas fa-utensil-spoon"></i>
+                    <h3>side dishes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae, totam minus rem facilis deserunt corrupti pariatur facere vero.</p>
+                </li>              
+            </ul>
+        </section>
+        <div class="feature featureImg">
+            <img src="./assets/home-3.jpeg" alt="meat taco with avacado topping surrounded by ingredients including lemons">
+        </div>
+    </main>
+    <section class="restaurants">
+        <img class="sticker" src="./assets/home-circle-text.png" alt="a fancy food place yummmm sticker">
+        <!-- psuedo element floating above img -->
+        <img src="./assets/home-4.jpeg" alt="wooden tables and chairs in brightly lit stone patio">
+        <h2>our restaurants</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolore amet sit, eaque maxime illum? Enim expedita dolor blanditiis saepe laudantium eius autem est, quia reiciendis impedit commodi?</p>
+    </section>
+    <section >
+        <ul class="galleryContainer">
+            <li class="galleryImg"><img src="./assets/home-5.jpeg" alt="looking down onbowl of gaspatchio soup with tomatoes, nts and flower garnishes"></li>
+            <li class="galleryImg"><img src="./assets/home-6.jpeg" alt="small burger with slaw and sauce on rice paper   "></li>
+            <li class="galleryImg"><img src="./assets/home-7.jpeg" alt="medium shot of   a pile of radishes and beets"></li>
+            <li class="galleryImg"><img src="./assets/home-8.jpeg" alt="cream layered cake with floral and herb decoartion "></li>
+            <li class="galleryImg"><img src="./assets/home-9.jpeg" alt="blueberry scones on parchment surrounded by a bowl of berries and large flowers"></li>
+            <li class="galleryImg"><img src="./assets/home-10.jpeg" alt="dip with green herbs in a white bowl from overhaed"></li>
+        </ul>
+    </section>
+    <aside>
+        <h2>hungry clients</h2>
+        <!-- green underline graphic element-->
+        <!-- on p :pseduo quotes, before and after -->
+        <i class="fas fa-quote-left"></i>
+        <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illo recusandae, omnis molestiae illum laudantium soluta laboriosam excepturi eum voluptate, saepe explicabo sit consequatur itaque repellendus amet aliquam hic magnam corporis ratione fugiat! Quam provident delectus ut molestias repellendus?</p>
+        <i class="fas fa-quote-right"></i>
+        <div class="scrollNav">
+            <i class="fas fa-chevron-left"></i>
+            <i class="fas fa-chevron-right"></i>
+        </div>
+        <!-- forward arrow -->
+    </aside>
+    <footer>
+        <section class="card contactCard">
+            <h4 class="contactCardTitle">Delicious</h4>
+            <!-- underline with border-botton ? -->
+            <p class="contactName" >a delicious restaurant</p>
+            <p class="contactAddress">tortonto, ontario</p>
+            <p class="contactEmail">yum@food.com</p>
+            <p class="contactTel">+1 234 567 8910</p>
+        </section>
+        <section class="card postsCard">
+            <h3>recent posts</h3>
+            <ul class="postsCardTitle" >
+                <li>lorem ipsum dolor sit amet</li>
+                <li>consectetur adipisicing elit quibusdam</li>
+                <li>neque repudiandae nostrum distinctio harum</li>
+                <li> Ea molestiae ad recusandae explicabo </li>
+                <li>dolore voluptatem eaque iste aspernatur debitis?</li>
+                <li>omnis molestiae illum laudantium soluta</li>
+            </ul>
+        </section>
+        <section class="card subscribeCard">
+            <h3>subscribe now</h3>
+            <p>get all of our newest resipes immediately in your inbox!</p>
+            <form class="subscribeEmail" action="subscribe">
+                <input type="email" name="subscribeEmail" id="">
+                <input type="submit" value="f30b">
+                <!-- <i class="fas fa-long-arrow-alt-right"></i> -->
+            </form>
+            <div>
+                <ul class="socialIcons">
+                    <li class="smlSocialIcon">
+                        <a href="http://facebook.com" title="Got to Facebook">facebook</a>
+                    </li>
+                    <li class="smlSocialIcon">
+                        <a href="http://twitter.com" title="Got to Twitter">twitter</a>
+                    </li>
+                    <li class="smlSocialIcon">
+                        <a href="http://linkedin" title="Got to Linkedin">linkedin</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </footer>
+
 </body>
 </html>
