link to scss and initial foders

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,39 @@
     <title>Delicious Blog</title>
 </head>
 <body>
-    
+    <header class="blogHead">
+        <!-- paste from index
+        replace h1 > h2, different background image & sizing-->
+    </header>
+
+    <main>
+        <article class="featureBlog">
+
+            <!-- blog Title section -->
+            <div class="blogTitleHead">
+                <h1 class="blogTitle">pineapple chicken</h1>
+                <p class="blogDate">posted at July 11, 2018</p>
+                <p class="blogBy">by admin</p>
+                <div class="blogCategory">
+                    <a href="#recipes">in Recipes</a>
+                </div>
+            </div>
+
+            <!-- blog Content section -->
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa reprehenderit nisi esse commodi sunt unde laborum odio! Maxime sequi perspiciatis autem itaque, dolore totam iste perferendis, consequatur molestias accusantium quisquam? Inventore similique omnis quaerat? 
+            </p>
+            <!-- create button to open collapsed article -->
+            <a class="blogHidden" href="#blogReveal">continue reading</a>
+            <!-- hide on larger pages -->
+            <p class="blogShown" id="blogReveal">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima explicabo aspernatur voluptas assumenda delectus! Velit explicabo repellendus culpa provident aut?
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt reprehenderit dolor sed iusto, aperiam cum ipsum provident eum sequi! Facilis impedit, non sapiente deserunt fugit ab laboriosam rem repellendus assumenda repudiandae, inventore iste.
+            </p>
+
+
+        </article>
+    </main>
+
 </body>
 </html>
