--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         rel="stylesheet"><!-- google fonts link -->
     <script src="https://kit.fontawesome.com/eea5571693.js"
         crossorigin="anonymous"></script>    
-    <link rel="stylesheet" href="./style/style.css"><!-- font awesome link -->  
+    <link rel="stylesheet" href="./styles/styles.css"><!-- font awesome link -->  
     <title>Delicious Home Page</title>
 </head>
 <body>
@@ -170,6 +170,5 @@
             </div>
         </section>
     </footer>
-
 </body>
 </html>
