--- a/index.html
+++ b/index.html
@@ -158,13 +158,18 @@
             <div>
                 <ul class="socialIcons">
                     <li class="smlSocialIcon">
-                        <a href="http://facebook.com" title="Got to Facebook">facebook</a>
+                        <a href="http://facebook.com" aria-label="Click link to Facebook page" >
+                            <i aria-hidden class="fab fa-facebook-f"></i></a>
                     </li>
                     <li class="smlSocialIcon">
-                        <a href="http://twitter.com" title="Got to Twitter">twitter</a>
+                        <a href="http://twitter.com" aria-label="Click link to Twitter page" >
+                            <i aria-hidden class="fab fa-twitter"></i></a>
                     </li>
                     <li class="smlSocialIcon">
-                        <a href="http://linkedin" title="Got to Linkedin">linkedin</a>
+                        <a href="https://www.instagram.com"
+                            aria-label="Click link to Instagram page" >
+                            <i aria-hidden class="fab fa-instagram"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
