reworked gallery, sorted section and roughed in features on homepage

--- a/index.html
+++ b/index.html
@@ -51,71 +51,91 @@
         </div>
     </header>
     <main>
-        <section class="feature featureRecipe">
-            <h2>most popular recipes</h2>     
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quis. Porro alias amet quasi ea. Possimus provident nemo atque enim eligendi, fugit commodi quia in corrupti? Consequatur laboriosam perspiciatis nam a reprehenderit, cupiditate, recusandae aperiam hic commodi, dicta est ex aspernatur beatae tempora ipsum unde ut! Provident, repudiandae.</p>
-            <!-- 48 words -->
-            <a class="button" href="http://">view recipes</a>
-        </section>
-        <div class="feature featureImg">
-            <img src="./assets/home-2.jpeg" alt="looking down on blue salad bowl with greens">
-        </div>
-        <section class="feature featureCategories">
-            <ul>
-                <li>
-                    <i aria-hidden="true" class="fas fa-lemon"></i>
-                    <h3>vegetarian</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt, illo nihil perferendis vitae sint tempora voluptas tempore suscipit?</p>
-                    <!-- 19 words -->
-                </li>
-                <li>
-                    <i aria-hidden="true" class="fas fa-utensils"></i>
-                    <h3>appetizers</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi architecto facilis sint soluta! Quod, magnam. Perspiciatis, odio. Dolores, sapiente?</p>
-                </li>   
-                <li>
-                    <i aria-hidden="true" class="fas fa-coffee"></i>
-                    <h3>desserts</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium in natus earum incidunt pariatur adipisci animi excepturi tenetur aliquam.</p>
-                </li>
-                <li>
-                    <i aria-hidden="true" class="fas fa-glass-martini"></i>
-                    <h3>drinks</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quidem obcaecati dolore totam repudiandae ex facilis quibusdam fugit corrupti!</p>
-                </li>
-                <li>
-                    <i aria-hidden="true" class="fas fa-leaf"></i>
-                    <h3>salads</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusantium cum facere sapiente, fuga delectus laboriosam quae vitae esse?</p>
-                </li>
-                <li>
-                    <i aria-hidden="true" class="fas fa-utensil-spoon"></i>
-                    <h3>side dishes</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae, totam minus rem facilis deserunt corrupti pariatur facere vero.</p>
-                </li>              
-            </ul>
-        </section>
-        <div class="feature featureImg">
-            <img src="./assets/home-3.jpeg" alt="meat taco with avacado topping surrounded by ingredients including lemons">
+        <div class="featureContainer">
+            <section class="feature featureRecipe">
+                <h2>most popular recipes</h2>     
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quis. Porro alias amet quasi ea. Possimus provident nemo atque enim eligendi, fugit commodi quia in corrupti? Consequatur laboriosam perspiciatis nam a reprehenderit, cupiditate, recusandae aperiam hic commodi, dicta est ex aspernatur beatae tempora ipsum unde ut! Provident, repudiandae.</p>
+                <!-- 48 words -->
+                <a class="button" href="http://">view recipes</a>
+            </section>
+            <div class="feature featureImg">
+                <img src="./assets/home-2.jpeg" alt="looking down on blue salad bowl with greens">
+            </div>
+            <div class="feature featureImg">
+                <img src="./assets/home-3.jpeg"
+                    alt="meat taco with avacado topping surrounded by ingredients including lemons">
+            </div>
+            <section class="feature featureCategories">
+                <ul>
+                    <li>
+                        <i aria-hidden="true" class="fas fa-lemon"></i>
+                        <h3>vegetarian</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis nesciunt, illo nihil perferendis vitae sint tempora voluptas tempore suscipit?</p>
+                        <!-- 19 words -->
+                    </li>
+                    <li>
+                        <i aria-hidden="true" class="fas fa-utensils"></i>
+                        <h3>appetizers</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi architecto facilis sint soluta! Quod, magnam. Perspiciatis, odio. Dolores, sapiente?</p>
+                    </li>   
+                    <li>
+                        <i aria-hidden="true" class="fas fa-coffee"></i>
+                        <h3>desserts</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium in natus earum incidunt pariatur adipisci animi excepturi tenetur aliquam.</p>
+                    </li>
+                    <li>
+                        <i aria-hidden="true" class="fas fa-glass-martini"></i>
+                        <h3>drinks</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, quidem obcaecati dolore totam repudiandae ex facilis quibusdam fugit corrupti!</p>
+                    </li>
+                    <li>
+                        <i aria-hidden="true" class="fas fa-leaf"></i>
+                        <h3>salads</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla accusantium cum facere sapiente, fuga delectus laboriosam quae vitae esse?</p>
+                    </li>
+                    <li>
+                        <i aria-hidden="true" class="fas fa-utensil-spoon"></i>
+                        <h3>side dishes</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quae, totam minus rem facilis deserunt corrupti pariatur facere vero.</p>
+                    </li>              
+                </ul>
+            </section>
+
         </div>
     </main>
-    <section class="restaurants">
-        <img class="sticker" src="./assets/home-circle-text.png" alt="a fancy food place yummmm sticker">
-        <!-- psuedo element floating above img -->
-        <img src="./assets/home-4.jpeg" alt="wooden tables and chairs in brightly lit stone patio">
-        <h2>our restaurants</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolore amet sit, eaque maxime illum? Enim expedita dolor blanditiis saepe laudantium eius autem est, quia reiciendis impedit commodi?</p>
+    <section class="restaurant">
+        <div>
+            <img class="sticker" src="./assets/home-circle-text.png" alt="a fancy food place yummmm sticker">
+            <!-- psuedo element floating above img -->
+            <img src="./assets/home-4.jpeg" alt="wooden tables and chairs in brightly lit stone patio">
+            <h2>our restaurants</h2>
+            <div class="graphicLine"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi dolore amet sit, eaque maxime illum? Enim expedita dolor blanditiis saepe laudantium eius autem est, quia reiciendis impedit commodi?</p>
+        </div>
     </section>
     <section >
         <ul class="galleryContainer">
-            <li class="galleryImg"><img src="./assets/home-5.jpeg" alt="looking down onbowl of gaspatchio soup with tomatoes, nts and flower garnishes"></li>
-            <li class="galleryImg"><img src="./assets/home-6.jpeg" alt="small burger with slaw and sauce on rice paper   "></li>
-            <li class="galleryImg"><img src="./assets/home-7.jpeg" alt="medium shot of   a pile of radishes and beets"></li>
-            <li class="galleryImg"><img src="./assets/home-8.jpeg" alt="cream layered cake with floral and herb decoartion "></li>
-            <li class="galleryImg"><img src="./assets/home-9.jpeg" alt="blueberry scones on parchment surrounded by a bowl of berries and large flowers"></li>
-            <li class="galleryImg"><img src="./assets/home-10.jpeg" alt="dip with green herbs in a white bowl from overhaed"></li>
+            <li class="galleryImg galleryImg1">
+                <img src="./assets/home-5.jpeg" alt="looking down onbowl of gaspatchio soup with tomatoes, nts and flower garnishes">
+            </li>
+            <li class="galleryImg galleryImg2">
+                <img src="./assets/home-6.jpeg" alt="small burger with slaw and sauce on rice paper   ">
+            </li>
+            <li class="galleryImg galleryImg3">
+                <img src="./assets/home-7.jpeg" alt="medium shot of   a pile of radishes and beets">
+            </li>
+            <li class="galleryImg galleryImg4">
+                <img src="./assets/home-8.jpeg" alt="cream layered cake with floral and herb decoartion ">
+            </li>
+            <li class="galleryImg galleryImg5">
+                <img src="./assets/home-9.jpeg" alt="blueberry scones on parchment surrounded by a bowl of berries and large flowers">
+            </li>
+            <li class="galleryImg galleryImg6">
+                <img src="./assets/home-10.jpeg" alt="dip with green herbs in a white bowl from overhaed">
+            </li>
         </ul>
     </section>
+
     <blockquote>
         <h2>hungry clients</h2>
         <!-- green underline graphic element-->
@@ -188,3 +208,4 @@
     </footer>
 </body>
 </html>
+
